@@ -91,6 +91,7 @@ bool CDVDPlayer::OpenFile(const CFileItem& file, __int64 iStartTime)
   WaitForSingleObject(m_hReadyEvent, INFINITE);
 
   SetSubtitleVisible(g_stSettings.m_currentVideoSettings.m_SubtitleOn);
+  SetAVDelay(g_stSettings.m_currentVideoSettings.m_AudioDelay);
 
   // if we are playing a media file with pictures, we should wait for the video output device to be initialized
   // if we don't wait, the fullscreen window will init with a picture that is 0 pixels width and high
